guestbook/guestbook-ui-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8081
  selector:
    app: guestbook-ui
